--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
             </div>
         </section>
         <script src="scripts/landing.js"></script>
+        <script>
+            animatePoints();
+        </script>
     </body>
 </html>
